[package]
name = "safe"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
regex = "1.11.0"
clipboard = "0.5"

# Related to encryption
aes-gcm = "0.10"                                   # For AES-GCM encryption/decryption
aes = "0.8"                                        # Required by aes-gcm
rand = "0.8"                                       # For random number generation
argon2 = "0.4"                                     # For Argon2 KDF
rpassword = "7.3.1"                                # For secure password input
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"                                    # For encoding/decoding binary data
